--- a/index.ipynb
+++ b/index.ipynb
@@ -65,9 +65,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "a2076b5c-466c-11e9-a142-f34ae5d6cfaa",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          2,
+          3,
+          4
+         ]
+        },
+        {
+         "type": "scatter",
+         "uid": "a2076cf6-466c-11e9-a142-f34ae5d6cfaa",
+         "x": [
+          2,
+          3,
+          4
+         ],
+         "y": [
+          5,
+          3,
+          4
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Our sample plot"
+       }
+      },
+      "text/html": [
+       "<div id=\"bec17df3-91b5-4350-a8fd-cab37b6d4303\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bec17df3-91b5-4350-a8fd-cab37b6d4303\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"a21f5ba4-466c-11e9-a142-f34ae5d6cfaa\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"a21f5db6-466c-11e9-a142-f34ae5d6cfaa\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"bec17df3-91b5-4350-a8fd-cab37b6d4303\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bec17df3-91b5-4350-a8fd-cab37b6d4303\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"a21f5ba4-466c-11e9-a142-f34ae5d6cfaa\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"a21f5db6-466c-11e9-a142-f34ae5d6cfaa\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sample_trace = {'x': [1, 2, 3], 'y': [2, 3, 4]}\n",
     "other_sample_trace = {'x': [2, 3, 4], 'y': [5, 3, 4]}\n",
