--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    trace = \n",
+    "    trace = []\n",
+    "    \n",
     "    return trace"
    ]
   },
