Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    \n",
+    "    for val in data.ietm\n",
     "    return trace"
    ]
   },
