Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    for val in data.ietm\n",
+    "    for val in data.items()\n",
+    "        x.append\n",
     "    return trace"
    ]
   },
