--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
     "    x = []\n",
     "    y = []\n",
     "    for val in data.items()\n",
-    "        x.append\n",
+    "        x.update\n",
     "    return trace"
    ]
   },
