--- a/index.ipynb
+++ b/index.ipynb
@@ -188,17 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-08afab4f6315>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-08afab4f6315>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for val in data.items()\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
     "    for val in data.items()\n",
-    "        x.update(v)\n",
-    "    return trace"
+    "        x.update(val)\n",
+    "    print x"
    ]
   },
   {
