--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-08afab4f6315>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-5-e9a1e252bba6>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-08afab4f6315>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for val in data.items()\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-e9a1e252bba6>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -205,7 +205,7 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    for val in data.items()\n",
+    "    for val in data\n",
     "        x.update(val)\n",
     "    print x"
    ]
