--- a/index.ipynb
+++ b/index.ipynb
@@ -202,6 +202,7 @@
    ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
+    "    data\n",
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
