Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,21 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-e9a1e252bba6>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-6-ac18b5d0ab14>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-e9a1e252bba6>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-ac18b5d0ab14>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "def build_trace(data, mode = 'markers', name = 'data'):\n",
+    "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]\n",
     "\n",
+    "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
