--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
     "    x = []\n",
     "    y = []\n",
     "    for val in data\n",
-    "        x.update(val)\n",
+    "        print val\n",
     "    print x"
    ]
   },
