Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,8 @@
     "    y = []\n",
     "    for val in data\n",
     "        print val\n",
-    "    print x"
+    "\n",
+    "build"
    ]
   },
   {
