Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-ac18b5d0ab14>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-7-1638b62f88c3>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-ac18b5d0ab14>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1638b62f88c3>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "    for val in data\n",
     "        print val\n",
     "\n",
-    "build"
+    "build_trace(data)"
    ]
   },
   {
