Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    for val in data\n",
+    "    for val in data ()\n",
     "        print val\n",
     "\n",
     "build_trace(data)"
