--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-1638b62f88c3>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-8-7d0b2f3aca11>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1638b62f88c3>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-7d0b2f3aca11>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data (keys)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    for val in data ()\n",
+    "    for val in data (keys)\n",
     "        print val\n",
     "\n",
     "build_trace(data)"
