Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,15 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-c8fbaf51c6df>, line 7)",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(val)? (<ipython-input-10-1335a9c3b008>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-c8fbaf51c6df>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for val in data()\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-1335a9c3b008>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print val\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(val)?\n"
      ]
     }
    ],
@@ -207,8 +207,8 @@
     "    trace = []\n",
     "    x = []\n",
     "    y = []\n",
-    "    for val in data\n",
-    "        print val\n",
+    "    for val in data:\n",
+    "        print (val)\n",
     "\n",
     "build_trace(data)"
    ]
