--- a/index.ipynb
+++ b/index.ipynb
@@ -188,19 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'x': 1, 'y': 1}\n",
-      "{'x': 3, 'y': 2}\n",
-      "{'x': 2, 'y': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]\n",
     "\n",
@@ -211,7 +201,7 @@
     "    for val in data:\n",
     "        print (val)\n",
     "\n",
-    "build_trace(data)"
+    "# build_trace(data)"
    ]
   },
   {
